Completed first version of the html file

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 <body>
     <div class="header">
         Header Logo
-    <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-    </ul>
+    <a href="#">Header link one</a>
+    <a href="#">Header link two</a>
+    <a href="#">Header link three</a>
     </div>
     <div class="container1">
         <div class="header">This website is awesome</div>
@@ -22,8 +20,31 @@
     </div>
     <div class="container2">
         <div class="information">
-            
+            <img src="./images/nahida.jpg" alt="Nahida from genshin impact">
+            <div class="character">One of the best characters in genshin impact</div>
+        </div>
+        <div class="information">
+            <img src="./images/raiden.png" alt="Raiden Shogun from genshin impact">
+            <div class="character">Trigger for the hyperbloom team</div>
+        </div>
+        <div class="information">
+            <img src="./images/xingqiu.png" alt="Xingqiu from genshin impact">
+            <div class="character">Enabler for the hyperbloom team</div>
+        </div>
+        <div class="information">
+            <img src="./images/zhongli.png" alt="Zhongli from genshin impact">
+            <div class="character">Comfort unit for the hyperbloom team</div>
         </div>
     </div>
+    <div class="container3">
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+        <div class="quoter">Thor, God of thunder</div>
+    </div>
+    <div class="container4">
+        <div class="header">Call to action, it's time</div>
+        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">Copyright © ZendoGod 2023</div>
 </body>
 </html>
