--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing_page</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="header">
-        Header Logo
+    <div class="header1">
+        <div class="title">Header Logo</div>
     <a href="#">Header link one</a>
     <a href="#">Header link two</a>
     <a href="#">Header link three</a>
     </div>
     <div class="container1">
-        <div class="header">This website is awesome</div>
+        <div class="header2">This website is awesome</div>
         <div class="text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</div>
         <button class="signup1">Sign up</button>
     </div>
@@ -41,7 +42,7 @@
         <div class="quoter">Thor, God of thunder</div>
     </div>
     <div class="container4">
-        <div class="header">Call to action, it's time</div>
+        <div class="header3">Call to action, it's time</div>
         <div class="text">Sign up for our product by clicking that button right over there!</div>
         <button>Sign up</button>
     </div>
