Finished first section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <a href="#">Header link three</a>
     </div>
     <div class="container1">
+        <div class="child">
         <div class="header2">This website is awesome</div>
-        <div class="text">This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</div>
+        <div class="text">This website has some subtext that goes here under the main title. This website has some subtext that goes here under the main title.This website has some subtext that goes here under the main title.This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</div>
         <button class="signup1">Sign up</button>
+    </div>
+        <img class="hutao" src="./images/hutao.jpg">
     </div>
     <div class="container2">
         <div class="information">
