--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <img class="hutao" src="./images/hutao.jpg">
     </div>
     <div class="container2">
+        <div class="title2">Some random information</div>
+        <div class="child">
         <div class="information">
             <img src="./images/nahida.jpg" alt="Nahida from genshin impact">
             <div class="character">One of the best characters in genshin impact</div>
@@ -39,6 +41,7 @@
             <img src="./images/zhongli.png" alt="Zhongli from genshin impact">
             <div class="character">Comfort unit for the hyperbloom team</div>
         </div>
+    </div>
     </div>
     <div class="container3">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
