--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="container3">
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
-        <div class="quoter">Thor, God of thunder</div>
+        <div class="quoter">-Thor, God of thunder</div>
     </div>
     <div class="container4">
         <div class="header3">Call to action, it's time</div>
