Finished final section and footer

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
         <div class="quoter">-Thor, God of thunder</div>
     </div>
     <div class="container4">
+        <div class="subscription">
         <div class="header3">Call to action, it's time</div>
         <div class="text">Sign up for our product by clicking that button right over there!</div>
+        </div>
         <button>Sign up</button>
     </div>
     <div class="footer">Copyright © ZendoGod 2023</div>
