Updated info and images

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
         <div class="text">This website has some subtext that goes here under the main title. This website has some subtext that goes here under the main title.This website has some subtext that goes here under the main title.This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast.</div>
         <button class="signup1">Sign up</button>
     </div>
-        <img class="hutao" src="./images/hutao.jpg">
+        <img class="hutao" src="./images/lantern.jpg">
     </div>
     <div class="container2">
         <div class="title2">Some random information</div>
         <div class="child">
         <div class="information">
             <img src="./images/nahida.jpg" alt="Nahida from genshin impact">
-            <div class="character">One of the best characters in genshin impact</div>
+            <div class="character">this is some subtext under an illustration or image</div>
         </div>
         <div class="information">
             <img src="./images/raiden.png" alt="Raiden Shogun from genshin impact">
-            <div class="character">Trigger for the hyperbloom team</div>
+            <div class="character">this is some subtext under an illustration or image</div>
         </div>
         <div class="information">
             <img src="./images/xingqiu.png" alt="Xingqiu from genshin impact">
-            <div class="character">Enabler for the hyperbloom team</div>
+            <div class="character">this is some subtext under an illustration or image</div>
         </div>
         <div class="information">
             <img src="./images/zhongli.png" alt="Zhongli from genshin impact">
-            <div class="character">Comfort unit for the hyperbloom team</div>
+            <div class="character">this is some subtext under an illustration or image</div>
         </div>
     </div>
     </div>
